--- a/README.ipynb
+++ b/README.ipynb
@@ -9,12 +9,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello\n"
+      "123\n"
      ]
     }
    ],
    "source": [
-    "print(\"hello\")"
+    "print(\"123\")"
    ]
   },
   {
