--- a/学习/第十二讲：预测模型/灰色预测/灰色预测.md
+++ b/学习/第十二讲：预测模型/灰色预测/灰色预测.md
@@ -53,9 +53,48 @@ $$z^1 = (z^1 (2),z^1(3),...,z^1(n))$$
 
 
 
+得出偏于更拟合的曲线紧邻边均值生成数列的线段。
+我们称方程 ==$x^0(k)+az^1(k)=b$== 为GM(1,1)模型的基本形式(k=2,3,……,n),其中，$b$表示灰作用量，$-a$表示发展系数(==发展系数越小，预测越精确==)
+
+
+将 ==$x^0$== 视为因变量 ==$y$==,==$z^1$== 序列视为自变量 ==$x$==,进行回归
+$x^0(k)=-az^1(k)+b$
+$y=kx+b$ ($k=2,3,...,n$)
+
+
+##原理介绍
+###基本过程：
+要将灰色微分方程白化，才能将其进行计算
+![Alt text](IMG_20230822_201915.jpg)
+
+
+微分方程：$\frac{dx^1(t)}{dt}=-ax^1+b$被成为GM(1,1)模型的白化方程
+
+![Alt text](image-1.png)
+
+
+$z^1(k)=\frac{x^1(k)+x^1(k-1)}{2}\approx\int^k_{k-1}x^1(t)dt$ （定积分的几何含义）
+
+$x^1(k)-x^1(k-1)=\int^k_{k-1}\frac{dx^1(t)}{dt}dt$   （牛顿-莱布尼茨公式）
+
+
+灰建模的初衷是对数列建立近似的微分方程模型，但是由于==微分方程只适合连续可微函数==，而实践序列数据非连续，更谈不上可微性，因此==灰色预测建模得到的是近似的微分方程==，称之为灰微分方程
+
+
+GM(1,1)模型的本质是有条件的指数拟合：$f(x)=C_1e^{C_2(x-1)}$, （注意，这里的指数规律主要是针对$x^1(k)$序列而言，原始序列是做差的结果（有点==类似于前缀和相加再做差==）
 
 
 
+###白化方程$\frac{dx^1(t)}{dt}=-ax^1+b$的求解
+![Alt text](IMG_20230822_203947.jpg)
+
+
+## 准指数规律的检验
+![Alt text](image-2.png)
+
+
+##GM(1,1)模型的评价
+对未来数据进行预测时，我们要先检验GM(1,1)模型对元数据
 
 
 ```python
